# figures

./: CMakeLists.txt  README.md  main.cpp
headers/: Circle.h  IShape.h  ISolidShape.h  LineSegment.h  Point.h  Rectangle.h  Shape.h  ShapeReader.h  Triangle.h
sources/: CMakeLists.txt  Circle.cpp  LineSegment.cpp  Point.cpp  Rectangle.cpp  Shape.cpp  ShapeReader.cpp  Triangle.cpp
tests/: CMakeLists.txt  tests.cpp
